# WanderLog

./: .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
services/python-backend/: Dockerfile  pyproject.toml  requirements.txt
services/python-backend/src/app/: main.py  pydantic_models.py  schemas.py
services/python-backend/src/app/db/: database.py  orm_models.py  timescaledb_repository.py
services/python-backend/src/app/models/: interior_classifier_EfficientNet_B3.py
services/python-backend/src/app/routers/: __init__.py  classify.py  location.py  user.py
services/telegram-bot/: .env.example  Dockerfile  pyproject.toml
services/telegram-bot/src/bot/: config.py  main.py
services/telegram-bot/src/bot/handlers/: __init__.py  base.py  image_classification.py  location.py
services/telegram-bot/src/bot/keyboards/: reply.py
services/telegram-bot/src/bot/middlewares/: album.py  base.py
services/telegram-bot/src/bot/services/: classification_service.py
services/telegram-bot/src/bot/utils/: file_validator.py  logger.py  messages.py  response_formatter.py
