[project]
name = "WanderLog"
version = "2025.0.0"
description = "Wander Log App. Pyproject toml for development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "fastapi[all]>=0.116.1",
]


[tool.ruff]
line-length = 120

# Какие правила проверять
select = [
    "E",  # Pycodestyle errors
    "F",  # Pyflakes
    "I",  # Isort
    "UP",  # Pyupgrade
    "N",  # Naming
    "C4",  # Flake8-Comprehensions
    "D",  # Docstrings
    "B",  # Bugbear
    "RUF"  # Ruff-specific
]
ignore = ["E501", "D401"]  # Игнорировать конкретные правила
unfixable = ["F401"]  # Не автоисправлять неиспользуемые импорты

[tool.ruff.isort]  # Настройки сортировки импортов
known-first-party = ["wanderlog"]  # Какие модули считать "своими"
lines-after-imports = 2  # Пустых строк после импортов
