# pyproject.toml
[project]
name = "WanderLog"
version = "2025.0.0"
description = "Wander Log App. Pyproject toml for development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "fastapi[all]>=0.116.1",
]

# Common Ruff setings
[tool.ruff]
line-length = 120


[tool.ruff.lint]
# Rules for checking the code
select = [
    "E",  # Pycodestyle errors
    "F",  # Pyflakes
    "I",  # Isort
    "UP",  # Pyupgrade
    "N",  # Naming
    "C4",  # Flake8-Comprehensions
    "D",  # Docstrings
    "B",  # Bugbear
    "RUF"  # Ruff-specific
]

# Ignore specific rules
ignore = [
    "E501",  # Checks for lines that exceed the specified maximum character length.
    "D100",  # Checks for undocumented public module definitions.
    "D103",  # Missing docstring in public function
    "D203", # incorrect-blank-line-before-class
    "D212",  # multi-line-summary-second-line
    "D400",  # Checks for docstrings in which the first line does not end in a period.
    "D401",  # Checks for docstring first lines that are not in an imperative mood.
    "D415"  # Checks for docstrings in which the first line does not end in a punctuation mark, such as a period, question mark, or exclamation point.
]

unfixable = ["F401"]  # Do not auto-repair unused imports

# Import Sorting Settings
[tool.ruff.lint.isort]
known-first-party = ["wanderlog"]  # Какие модули считать "своими"
lines-after-imports = 2  # Пустых строк после импортов
