# services/python-backend/pyproject.toml
[project]
name = "wanderlog-python-backend"
version = "2025.0.0"
description = "Backend on FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]",
    "tqdm"
]


[build-system]
requires = ["setuptools >= 77.0.3", "uv"]
build-backend = "setuptools.build_meta"
